# arnio

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  DATA_CONTRACT_CI.md  Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md
arnio/: __init__.py  _core.py  cleaning.py  convert.py  exceptions.py  frame.py  io.py  pipeline.py  quality.py  schema.py
benchmarks/: README.md  benchmark_combine_columns.py  benchmark_from_pandas_memory.py  benchmark_gil_threading.py  benchmark_numeric_parse.py  benchmark_profile_duplicate_count.py  benchmark_sparse_nulls.py  benchmark_strip_whitespace.py  benchmark_to_pandas_overhead.py  benchmark_vs_pandas.py  generate_data.py
bindings/: bind_arnio.cpp
cpp/: CMakeLists.txt
cpp/include/arnio/: cleaning.h  csv_reader.h  frame.h
cpp/src/: cleaning.cpp  csv_reader.cpp  frame.cpp
cpp/tests/: test_cleaning.cpp  test_column.cpp  test_csv_parser.cpp  test_frame.cpp
docs/: TROUBLESHOOTING.md  chunked_from_pandas_design.md
examples/: README.md  arnio_chunk_reading.py  arnio_with_jsonl.py  check_env.py  schema_validation.py
tests/: test_benchmark_from_pandas.py  test_benchmarks.py  test_benchmarks_smoke.py  test_check_env.py  test_cleaning.py  test_cleaning_extra.py  test_coalesce_columns.py  test_combine_columns_extra.py  test_convert.py  test_csv.py  test_csv_chunked.py  test_csv_numeric_parsing.py  test_docs_profiling_privacy.py  test_examples_smoke.py  test_exceptions.py  test_filter_rows_invalid_comparison.py  test_frame.py  test_integrations_duckdb.py  test_io_smoke.py  test_jsonl.py  test_metadata.py  test_parquet.py  (+7 more)
(+22 files in other folders)
